--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  grid-gap: 100px;
 }
 
 .main-img {
@@ -214,16 +215,21 @@
   border: 2px solid #F4F4F4;
 }
 
-.card > img {
-  margin-top: -100px;
+.card-img {
+  grid-gap: 1px;
+  -moz-column-gap: 0;
+       column-gap: 0;
+}
+
+.card-img > img {
   margin-right: -50px;
+  margin-top: -150px;
 }
 
 .restangle {
   width: 20px;
   height: 65px;
   background: #F9BB88;
-  margin-bottom: 110px;
   margin-right: -50px;
 }
 
