--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
   background: #F9BB88;
   width: 600px;
   height: 750px;
-  margin-top: -100px;
+  margin-top: -150px;
   margin-left: -70px;
 }
 
@@ -49,8 +49,7 @@
 }
 
 .nav_menu > a:hover {
-  color: #111111;
-  font-weight: 500;
+  text-shadow: 2px 2px 5px #000000;
 }
 
 .nav_menu > a:focus {
@@ -59,10 +58,9 @@
 }
 
 .call_me {
-  display: grid;
-  -moz-columns: 1;
-       columns: 1;
-  margin-bottom: -50px;
+  margin-top: 50px;
+  margin-right: -50px;
+  width: 300px;
 }
 
 .call_me > a {
@@ -169,7 +167,7 @@
   width: 390px;
   height: 180px;
   margin-top: -4px;
-  margin-left: 307px;
+  margin-left: 290px;
 }
 
 .consultation-card > p {
@@ -217,8 +215,7 @@
 
 .card-img {
   grid-gap: 1px;
-  -moz-column-gap: 0;
-       column-gap: 0;
+  margin-bottom: 100px;
 }
 
 .card-img > img {
@@ -230,6 +227,7 @@
   width: 20px;
   height: 65px;
   background: #F9BB88;
+  margin-bottom: -15px;
   margin-right: -50px;
 }
 
@@ -258,17 +256,27 @@
 
 .catalog-cards {
   margin-top: 200px;
+  margin-left: 100px;
   grid-gap: 10px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .catalog-card > img {
-  box-shadow: 10px 10px 5px #F4F4F4;
   border: 2px solid #F4F4F4;
   width: 300px;
   height: 300px;
+}
+
+.catalog-card:hover {
+  cursor: pointer;
+  box-shadow: 0 0 20px 5px #f4f4f4;
+}
+
+.catalog-card:active {
+  cursor: pointer;
+  box-shadow: 0 0 20px 5px #f4f4f4;
 }
 
 .catalog-card-text {
@@ -285,10 +293,12 @@
 
 .button-4 {
   margin-top: 20px;
+  margin-bottom: 20px;
   padding: 10px 30px;
   border: none;
   background: #FF9640;
   border-radius: 2px;
+  box-shadow: 0px 2px 5px #8b8b8b;
   color: white;
 }
 
@@ -299,4 +309,144 @@
 .hero-btn-4:focus {
   transition: 1s;
   background: #303030;
+}
+
+.order-3d {
+  margin-top: 100px;
+  background: #F4F4F4;
+  width: 1360px;
+  margin-left: -51px;
+}
+
+.order-3d-title {
+  margin-left: 70px;
+  padding: 50px 300px;
+  text-align: center;
+}
+
+.order-3d-title > h1 {
+  width: 600px;
+  font-size: 30px;
+}
+
+.order-3d-title > p {
+  margin: 40px 50px;
+  width: 500px;
+}
+
+.order-3d-input {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-gap: 80px;
+}
+
+.order-3d-input > input {
+  background: #F4F4F4;
+  border: none;
+  border-bottom: 1px solid #8b8b8b;
+  padding: 5px 15px;
+  outline: none;
+}
+
+.order-3d-input > input:focus {
+  transition: 1s;
+  border-bottom: 1px solid #000000;
+}
+
+.submit {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+  grid-gap: 15px;
+}
+
+.button-5 {
+  padding: 10px 30px;
+  border: none;
+  background: #F98C37;
+  border-radius: 2px;
+  box-shadow: 0px 2px 5px #8b8b8b;
+  color: white;
+}
+
+.hero-btn-5:hover {
+  background: #ff6f00;
+}
+
+.hero-btn-5:focus {
+  transition: 1s;
+  background: #000;
+}
+
+.order-3d-text2 {
+  color: #8b8b8b;
+  width: 300px;
+}
+
+.order-3d-text2 > a {
+  color: #8b8b8b;
+}
+
+@media only screen and (max-width: 1024px) {
+  .call_me {
+    margin-right: -300px;
+  }
+  .card {
+    grid-gap: 20px;
+  }
+  .card-img {
+    margin-left: 20px;
+  }
+  .main-cards {
+    margin-left: 300px;
+  }
+  .catalog-title {
+    margin-right: -300px;
+    grid-gap: 300px;
+  }
+  .catalog-cards {
+    margin-left: 350px;
+    grid-gap: 20px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .nav_logo-text {
+    margin-left: -220px;
+  }
+  .nav_logo-text > p {
+    margin-right: -110px;
+  }
+  .background {
+    width: 400px;
+    margin-top: -165px;
+    margin-left: -180px;
+  }
+  .nav_menu {
+    display: grid;
+    -moz-columns: 1;
+         columns: 1;
+    margin-left: -250px;
+    margin-bottom: 50px;
+  }
+  .call_me {
+    margin-top: -200px;
+    margin-left: -200px;
+  }
+  .main-img {
+    margin-top: -50px;
+    margin-left: 50px;
+  }
+  .main-img > img {
+    width: 500px;
+    height: 300px;
+  }
+  .consultation-text {
+    margin-bottom: -650px;
+    margin-left: -150px;
+  }
+  .consultation-card {
+    margin-left: -31px;
+  }
 }/*# sourceMappingURL=style.css.map */
