Please give me 70 balls

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -724,7 +724,7 @@
 
 .footer {
     margin-top: 100px;
-    width: 1350px;
+    width: 1340px;
     height: 220px;
     background: #F4F4F4;
 }
@@ -1255,7 +1255,7 @@
     .project-img>img {
         width: 300px;
         height: 450px;
-        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .arrows {
